--- a/.github/workflows/hugo-pages.yaml
+++ b/.github/workflows/hugo-pages.yaml
@@ -55,7 +55,7 @@ jobs:
           HUGO_ENVIRONMENT: production
           HUGO_ENV: production
         run: |
-          hugo --gc --minify --baseURL "http://eleven.github.io/"
+          hugo --gc --minify --baseURL "http://loveRyujin.github.io/"
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
