--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -1,26 +1,26 @@
 disabled = false
-languageCode = "en"
-languageName = "English"
+languageCode = "zh-cn"
+languageName = "简体中文"
 weight = 1
-title = "Blowfish"
+title = "loveRyujin"
 
 [params]
-  displayName = "EN"
-  isoCode = "en"
+  displayName = "简体中文"
+  isoCode = "zh-cn"
   rtl = false
-  dateFormat = "2 January 2006"
+  dateFormat = "2006-01-02"
   # logo = "img/logo.png"
   # secondaryLogo = "img/secondary-logo.png"
   # description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
 
-# [params.author]
-#   name = "Your name here"
-#   email = "youremail@example.com"
-#   image = "img/blowfish_logo.png"
-#   imageQuality = 96
-#   headline = "I'm only human"
-#   bio = "A little bit about you"
+[params.author]
+  name = "loveRyujin"
+  email = "1725350830@qq.com"
+  image = "img/blowfish_logo.png"
+  imageQuality = 96
+  headline = "一名普普通通的go后端工程师"
+  bio = "一名普普通通的go后端工程师"
 #   links = [
 #     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
