chore: Update logo path for Chinese language configuration
- Update the logo path from &#34;img/logo.png&#34; to &#34;img/author.png&#34; for Chinese language configuration

Signed-off-by: lichen <1725350830@qq.com>

--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -9,7 +9,7 @@ title = "loveRyujin"
   isoCode = "zh-cn"
   rtl = false
   dateFormat = "2006-01-02"
-  # logo = "img/logo.png"
+  logo = "img/author.png"
   # secondaryLogo = "img/secondary-logo.png"
   # description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
