docs: Add Rust content page in Chinese
- Add Rust to the programming languages menu in Chinese
- Create new Rust content page with metadata

Signed-off-by: lichen <1725350830@qq.com>

--- a/config/_default/menus.zh-cn.toml
+++ b/config/_default/menus.zh-cn.toml
@@ -42,6 +42,12 @@
  pageRef = "typescript"
  weight = 10
 
+[[main]]
+ name = "Rust"
+ parent = "编程语言"
+ pageRef = "rust"
+ weight = 10
+
 # Github
 [[main]]
   name = "GitHub"
