--- a/config/_default/menus.zh-cn.toml
+++ b/config/_default/menus.zh-cn.toml
@@ -48,6 +48,12 @@
  pageRef = "rust"
  weight = 10
 
+[[main]]
+ name = "系列教程"
+ parent = "编程语言"
+ pageRef = "series"
+ weight = 11
+
 # Github
 [[main]]
   name = "GitHub"
