chore: Update site layout and content structure
- Add main sections parameter to Hugo configuration
- Update main sections list in params configuration
- Increase number of recent items shown from 6 to 10
- Remove Rust tutorial content and featured image

Signed-off-by: lichen <1725350830@qq.com>

--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -17,6 +17,9 @@ buildFuture = false
 
 enableEmoji = true
 
+[params]
+  mainSections = ["rust", "container-and-k8s", "go", "python", "typescript", "essay"]
+
 # googleAnalytics = "G-XXXXXXXXX"
 
 [pagination]
