--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -15,7 +15,7 @@ enableCodeCopy = false
 
 replyByEmail = false
 
-# mainSections = ["section1", "section2"]
+mainSections = ["rust", "container-and-k8s", "go", "python", "typescript"]
 # robots = ""
 
 disableImageOptimization = false
@@ -50,7 +50,7 @@ forgejoDefaultServer = "https://v11.next.forgejo.org"
   layout = "custom" # valid options: page, profile, hero, card, background, custom
   #homepageImage = "IMAGE.jpg" # used in: hero, and card
   showRecent = true
-  showRecentItems = 6
+  showRecentItems = 10
   showMoreLink = true
   showMoreLinkDest = "/container-and-k8s/"
   cardView = true
